package com.example.earlylife;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class MiscActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_misc);
    }
}