package com.example.earlylife;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class ShapesActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_shapes);
    }
}